all keys filter

--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,19 @@
 	<string>Tools</string>
 	<key>connections</key>
 	<dict>
+		<key>4DADC7A4-F493-4F0D-911F-814DF5C3E6A5</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>6125569B-F80C-4518-8375-F06908039270</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>891DD18D-1A89-4A02-88A1-D2A4F03E2919</key>
 		<array>
 			<dict>
@@ -46,6 +59,53 @@
 			<string>alfred.workflow.output.clipboard</string>
 			<key>uid</key>
 			<string>6125569B-F80C-4518-8375-F06908039270</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>keyword</key>
+				<string>stt</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string>查找中...</string>
+				<key>script</key>
+				<string>/usr/bin/ruby main.rb "allkeys-{query}"</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string>输入想要查找的 key</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>4DADC7A4-F493-4F0D-911F-814DF5C3E6A5</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -102,19 +162,26 @@
 	<string>Updated by Andreas Stokholm to be able to handle multiple local IP-addresses.</string>
 	<key>uidata</key>
 	<dict>
+		<key>4DADC7A4-F493-4F0D-911F-814DF5C3E6A5</key>
+		<dict>
+			<key>xpos</key>
+			<integer>140</integer>
+			<key>ypos</key>
+			<integer>70</integer>
+		</dict>
 		<key>6125569B-F80C-4518-8375-F06908039270</key>
 		<dict>
 			<key>xpos</key>
-			<integer>470</integer>
+			<integer>460</integer>
 			<key>ypos</key>
-			<integer>40</integer>
+			<integer>60</integer>
 		</dict>
 		<key>891DD18D-1A89-4A02-88A1-D2A4F03E2919</key>
 		<dict>
 			<key>xpos</key>
-			<integer>150</integer>
+			<integer>140</integer>
 			<key>ypos</key>
-			<integer>120</integer>
+			<integer>220</integer>
 		</dict>
 	</dict>
 	<key>webaddress</key>
