--- a/assets/urlMapping.json
+++ b/assets/urlMapping.json
@@ -1,5 +1,9 @@
 {
-  "dev-hp": "http://127.0.0.1:8102/",
+  "stage": "https://hurricane-cn.dandythrust.com/",
+  "stage-www": "https://hurricane-cn.dandythrust.com/",
+  "prod": "https://cn.student.com/",
+  "uat": "https://uat1-cn.dandythrust.com/",
+  "uat-www": "https://uat1-www.dandythrust.com/",  
   "dev-srp": "http://127.0.0.1:8202/uk/liverpool",
   "dev-srp-www": "http://127.0.0.1:8201/ja-jp/uk/london",
   "dev-pp": "http://127.0.0.1:8302/uk/london/p/pure-city",
@@ -8,9 +12,5 @@
   "dev-sp-www": "http://127.0.0.1:8601/my-account/dashboard",
   "dev-student-portal": "http://127.0.0.1:8602/my-account/dashboard",
   "dev-student-portal-www": "http://127.0.0.1:8601/my-account/dashboard",
-  "uat": "https://uat1-cn.dandythrust.com/",
-  "uat-www": "https://uat1-www.dandythrust.com/",
-  "stage": "https://hurricane-cn.dandythrust.com/",
-  "stage-www": "https://hurricane-cn.dandythrust.com/",
-  "prod-hp": "https://cn.student.com/"
+  "dev-hp": "http://127.0.0.1:8102/"
 }
