--- a/assets/urlMapping.json
+++ b/assets/urlMapping.json
@@ -8,6 +8,7 @@
   "dev-srp-www": "http://127.0.0.1:8201/ja-jp/uk/london",
   "dev-pp": "http://127.0.0.1:8302/uk/london/p/pure-city",
   "dev-pp-www": "http://127.0.0.1:8301/zh-cn/uk/london/p/nido-west-hampstead",
+  "dev-ppv2": "http://localhost:3000/uk/london/p/the-arcade",
   "dev-sp": "http://127.0.0.1:8602/my-account/dashboard",
   "dev-sp-www": "http://127.0.0.1:8601/my-account/dashboard",
   "dev-student-portal": "http://127.0.0.1:8602/my-account/dashboard",
