--- a/assets/url_mapping.json
+++ b/assets/url_mapping.json
@@ -1,6 +1,6 @@
 {
   "stage": "https://hurricane-cn.dandythrust.com/",
-  "stage-www": "https://hurricane-cn.dandythrust.com/",
+  "stage-www": "https://hurricane-www.dandythrust.com/",
   "prod": "https://cn.student.com/",
   "uat": "https://uat1-cn.dandythrust.com/",
   "uat-www": "https://uat1-www.dandythrust.com/",  
