--- a/assets/color_name_mapping.json
+++ b/assets/color_name_mapping.json
@@ -37,5 +37,6 @@
   "#44B549": "color-wechat",
   "#30d26b": "color-whatsapp",
   "#fff": "color-white",
-  "#018fe5": "color-zalo"
+  "#018fe5": "color-zalo",
+  "#bcbec0": "color-silver-sand"
 }
